make sure content x-overflow is scrollable

--- a/src/app.styl
+++ b/src/app.styl
@@ -108,6 +108,8 @@
         .body
           padding: 1em
           font-size: 95%
+          .md *
+            overflow-x: scroll
 
       .pagination
         text-align: center
